objects/Pricebook2.object
<CustomObject>
    <fields>
        <fullName>CN_Channel__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>List Price</fullName>
                </value>
                <value>
                    <fullName>KA</fullName>
                </value>
                <value>
                    <fullName>DS</fullName>
                </value>
                <value>
                    <fullName>WS</fullName>
                </value>
                <value>
                    <fullName>QSR</fullName>
                </value>
                <value>
                    <fullName>B2B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Price_Book_Code__c</fullName>
        <externalId>true</externalId>
        <label>Price Book Code</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>All_Price_Books</fullName>
        <columns>PRICEBOOK2.NAME</columns>
        <columns>CN_Channel__c</columns>
        <columns>CN_Price_Book_Code__c</columns>
        <columns>PRICEBOOK2.IS_ACTIVE</columns>
        <columns>PRICEBOOK2.DESCRIPTION</columns>
        <columns>CN_Effective_Date__c</columns>
        <columns>CN_Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Price Books</label>
    </listViews>
    <recordTypes>
        <fullName>CN_Price_Book</fullName>
        <active>true</active>
        <label>CN Price Book</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CN_PB_Check_Effective_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  RecordType.DeveloperName = &apos;CN_Price_Book&apos;,
  OR(
    ISNEW(),
    ISCHANGED(CN_Effective_Date__c)
  ),
  CN_Effective_Date__c &lt;  TODAY()
)</errorConditionFormula>
        <errorDisplayField>CN_Effective_Date__c</errorDisplayField>
        <errorMessage>Effective Date should be later than today.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_PB_Check_ExpirationDate</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  RecordType.DeveloperName = &apos;CN_Price_Book&apos;,
  CN_Effective_Date__c &gt; CN_Expiration_Date__c
)</errorConditionFormula>
        <errorDisplayField>CN_Expiration_Date__c</errorDisplayField>
        <errorMessage>Expiration Date should be later than Effective Date.</errorMessage>
    </validationRules>
</CustomObject>